Most words used function

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
         "https://mail.google.com/*",
         "https://www.linkedin.com/*"
       ],
-      "js": ["content.js", "app.js"]
+      "js": ["app.js"]
     }
   ]
 }
