--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "AI Command Extension",
   "version": "1.0",
-  "description": "Replace popup with a command in Twitter's tweet box",
+  "description": "SuperCharge your writing with AI",
   "host_permissions": ["http://*/*", "https://*/*"],
   "permissions": ["tabs", "activeTab", "scripting", "storage"],
   "content_scripts": [
